--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,7 +1,6 @@
 .intro {
     max-width: 690px;
-    max-height: 429px;
-    margin: auto;
+    margin: 0 auto;
     margin-bottom: 92px;
     margin-top: 114px;
     margin-left: 148px;
@@ -22,7 +21,6 @@
     @media screen and (max-width: 320px) {
         .intro {
             max-width: 320px;
-            min-height: 754px;
             margin-left: 16px;
     }
     }
