--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,17 +1,16 @@
 .lead__title {
     margin: 0 auto;
-    max-width: 720px;
-    font-family: 'Inter bold';
-    font-style: normal;
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
+    font-style: 700;
     font-weight: 900;
     font-size: 96px;
     line-height: 1.04;
     text-align: center;
+    max-width: 720px;
     }
     
     @media screen and (max-width: 767px) {
         .lead__title {
-            max-width: 288px;
             font-size: 40px;
             line-height: 1.1;
         }
