--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,23 +1,25 @@
 .cover__subtitle {
-    margin: 0 auto;
-    margin-top: 32px;
-    margin-bottom: 245px;
-    font-size: 18px;
-    line-height: 22px;
-    text-align: center;
-    max-width: 360px;
-    z-index: 1;
-    position: relative;
-    font-family: 'Inter';
-  }
+  margin: 0 auto;
+  margin-top: 32px;
+  margin-bottom: 245px;
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: center;
+  width: 360px;
+  z-index: 1;
+}
 
-  @media screen and (min-width: 321px) and (max-width: 768px) {
-    .cover__subtitle {
-      max-width: 288px;
-      max-height: 48px;
+@media screen and (max-width: 767px){
+  .cover__subtitle {
+      font-style: normal;
+      font-weight: normal;
       font-size: 14px;
       line-height: 16px;
-      margin-bottom: 0;
-    }
+      max-width: 260px;
+      margin-top: 16px;
+      margin-bottom: 33px;
+      
+  }
 }
   
