--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,22 +1,23 @@
 .cover__title {
-    margin: 0 auto;
-    margin-top: 245px;
-    font-size: 72px;
-    line-height: 76px;
-    text-align: center;
-    max-width: 560px;
-    z-index: 1;
-    position: relative;
-    font-family: 'Inter bold';
-  }
+  margin: 0 auto;
+  margin-top: 245px;
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-size: 72px;
+  line-height: 76px;
+  text-align: center;
+  width: 560px;
+  z-index: 1;
+}
 
-
-@media screen and (min-width: 321px) and (max-width: 768px) {
-    .cover__title {
-      max-width: 288px;
-      max-height: 70px;
+@media screen and (max-width: 767px) {
+  .cover__title {
+      font-style: normal;
+      font-weight: 900;
       font-size: 32px;
       line-height: 35px;
-      margin-top: 0;
-    }
+      max-width: 250px;
+      margin-top: 33px;
+  }
+  
 }
