--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,9 +1,26 @@
 .cover {
-    margin: 0 auto;
-    position: relative; 
-    max-width: 1279px;
-    justify-content: center;
-    align-items: center;
-  
-  }
+  max-width: 1184px;
+  position: relative;
+  margin: 0 auto;
+  margin-top: 92px;
 
+}
+
+@media all and (max-width: 1023px){
+  .cover{
+      max-height: 480px;
+      max-width: 768px;
+      margin-top: 0;
+      margin-bottom: 0;
+  }
+}
+
+
+@media all and (max-width: 767px){
+  .cover  {
+      max-height: 200px;
+      max-width: 320px;
+      margin-top: 0;
+      margin-bottom: 0;
+  }
+}
