--- a/blocks/footer/__row/footer__row.css
+++ b/blocks/footer/__row/footer__row.css
@@ -8,26 +8,20 @@
     text-decoration: none;
     color: #FFFFFF;
     padding: 92px 48px 24px 48px;
-    list-style: none;  
-  }
+    list-style: none;
+}
 
-  @media screen and (min-width: 769px) and (max-width: 1024px) {
+@media screen and (min-width: 769px) and (max-width: 1024px) {
     .footer__row {
-        max-width: 720px;
         padding: 88px 24px 24px 24px;
-
     }
 }
 
 @media screen and (min-width: 321px) and (max-width: 768px) {
     .footer__row {
-        padding: 88px 24px 24px 24px;
-        padding-left:0 ;
-        grid-template-rows: repeat(5, 1fr);
-        grid-template-columns: repeat(1, 1fr);
-        padding-left: 16px;
-        padding-bottom: 16px;
-        gap: 32px;
+        padding-left: 0;
+        max-height: 18px;
+        max-width:93.75%;
     }
 }
 
