--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,20 +5,17 @@
     align-items: flex-end;
   }
 
-  @media screen and (max-width: 1279px) {
-    .header {
-      margin-bottom: 48px;
+  @media screen and (min-width: 1023px) and (max-width: 1279px) {
+    .header { 
+          max-width: 1184px;
+          margin-top: 28px;
     }
-  }
-  
-  @media screen and (max-width: 1023px) {
-    .header {
-      margin: 28px 24px 48px;
-    }
+    
   }
   
   @media screen and (max-width: 767px) {
     .header {
       margin: 16px 16px 48px;
+      max-width: 720px;
     }
   }
