--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,9 +1,7 @@
 .intro__text {
-    max-width: 690px;
-    min-height: 208px;
-    font-family: 'Inter';
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
     font-style: normal;
-    font-weight: normal;
+    font-weight: 400;
     font-size: 16px;
     line-height: 163%;
     color: #FFFFFF;
@@ -15,18 +13,8 @@
         }   
     }
     
-    @media screen and (max-width: 768px) {
-        .intro__text {
-            max-width: 720px;
-        }
-    }
-    
     @media screen and (max-width: 320px) {
         .intro__text {
-            max-width: 320px;
-            font-style: normal;
-            font-weight: normal;
-            font-size: 16px;
-            line-height: 163%;
+            
         }
     }
