--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,5 +1,5 @@
 .intro__title {
-    font-family: 'Inter bold';
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: 900;
     font-size: 54px;
@@ -16,15 +16,6 @@
     
     @media screen and (max-width: 768px) {
         .intro__title {
-            max-width: 720px;
-        }
-    }
-    
-    @media screen and (max-width: 768px) {
-        .intro__title {
-            max-width: 250px;
-            font-style: normal;
-            font-weight: 900;
             font-size: 32px;
             line-height: 35px;
         }
