--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -4,26 +4,28 @@
     gap: 16px;
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
     grid-template-rows: auto;
+    max-width: 1184px;
+    padding-bottom: 92px;
     }
 
         @media screen and (max-width: 1279px) {
         .photo-grid {
           gap: 14px;
-          margin: auto;
+          width: 95%;
           }
         }
           
-        @media screen and (max-width: 957px) {
+        @media screen and (max-width: 1023px) {
         .photo-grid {
-          padding-top: 88px;
-          margin: auto;
+          padding-bottom: 88px;
+          width: 93%;
           }
         }
         
         @media screen and (max-width: 658px) {
         .photo-grid  {
-          padding-top: 64px;
+          padding-bottom: 64px;
+          width: 90%;
           gap: 12px;
-          margin: auto;
           }
         }
