--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,10 +1,12 @@
 .place__title {
     margin: 0;
     font-style: normal;
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
     font-weight: 900;
     font-size: 72px;
     line-height: 1.06;
     color: #ffffff;
+    max-width: 460px;
 }
 
 @media screen and (max-width: 768px) {
@@ -15,9 +17,9 @@
     }
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (max-width: 1024px) {
     .place__title {
-        font-size: 72px;
-        margin: 0;
+        font-size: 42px;
+        max-width: 340px;
     }
 }
