--- a/pages/index.css
+++ b/pages/index.css
@@ -1,11 +1,11 @@
 @import url(../vendor/normalize.css);
+@import url(../fonts/inter.css);
 @import url(../blocks/root/root.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
-@import url(../blocks/header/__lang-link/header__lang-link_active.css);
-@import url(../blocks/header/__lang-link/header__lang-link_en.css);
-@import url(../blocks/header/__lang-link/header__lang-link_ru.css);
+@import url(../blocks/header/__lang/header__lang.css);
+@import url(../blocks/header/__lang/header__lang_active.css);
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/lead/__caption/lead__caption.css);
 @import url(../blocks/lead/__image/lead__image.css);
@@ -13,12 +13,12 @@
 @import url(../blocks/lead/__title/lead__title.css);
 @import url(../blocks/intro/intro.css);
 @import url(../blocks/intro/__list/intro__list.css);
-@import url(../blocks/intro/__list/intro__list_numbers.css);
+@import url(../blocks/intro/__numbers/intro__numbers.css);
 @import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/intro/__title/intro__title.css);
 @import url(../blocks/photo-grid/photo-grid.css);
-@import url(../blocks/photo-grid/__photo/grid__photo.css);
-@import url(../blocks/place/places.css);
+@import url(../blocks/photo-grid/__photo/photo-grid__photo.css);
+@import url(../blocks/places/places.css);
 @import url(../blocks/place/place.css);
 @import url(../blocks/place/__image/place__image.css);
 @import url(../blocks/place/__link/place__link.css);
