--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,19 +1,20 @@
 .cover__title {
-  margin: 0 auto;
-  margin-top: 245px;
-  font-family: 'Inter', Arial, Helvetica, sans-serif;
-  font-style: normal;
+  margin: 0;
+  max-width: 560px;
   font-size: 72px;
   line-height: 76px;
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
+  font-weight: 900;
   text-align: center;
-  width: 560px;
+  grid-column: 1;
+  grid-row: 1;
   z-index: 1;
+  justify-self: center;
+  align-self: end;
 }
 
 @media screen and (max-width: 767px) {
   .cover__title {
-      font-style: normal;
-      font-weight: 900;
       font-size: 32px;
       line-height: 35px;
       max-width: 250px;
