--- a/blocks/header/__lang/header__lang.css
+++ b/blocks/header/__lang/header__lang.css
@@ -1,24 +1,21 @@
 .header__lang {
-  margin-right: 18px;
-  margin-top: 46px;
-  font-style: normal;
-  text-align: right;
-  font-size: 24px;
-  line-height: 28px;
+  text-decoration: none;
+  color: #fff;
+  padding-left: 18px;
   font-family: 'Inter', Arial, Helvetica, sans-serif;
   font-weight: 400;
-  color: #ffff;
-  text-decoration: none;
-  transition: opacity 0.6 linear;
-}
-.header__lang:hover {
-  opacity: .6;
+  font-size:  24px;
+  line-height: 28px;
+  transition: .2s ease-in-out;
 }
 
-@media screen and (max-width: 768px) {
-  .header__lang  {
+.header__lang:hover {
+  opacity: .5;
+}
+
+@media screen and (max-width: 320px) {
+  .header__lang {
     font-size: 18px;
     line-height: 20px;
-    margin-top: 30px;
-    }
   }
+}
