--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,20 +1,19 @@
-.header__logo {
-  margin-left: 48px;
-  margin-top: 28px;  
+.header__logo { 
+  max-width: 176px; 
 }
-    
-@media screen and (max-width: 1023px) {
-    .header__logo {
-      margin-left:24px;
-      margin-top: 28px;
-    
-      }
-    }
     
  @media screen and (max-width: 768px) {
     .header__logo  {
-        margin-left: 16px;
-        margin-top: 16px;
         max-width: 142px;
+      }
+    }
+
+  @media screen and (max-width: 320px) {
+      .header__logo{
+        max-width: 142px;
+        max-height: 42px;
+        background-position: center;
+        background-size: contain;
+        background-repeat: no-repeat;
       }
     }
