--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,31 +1,32 @@
 .photo-grid {
-    margin: auto;
-    display: grid;
-    gap: 16px;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-    grid-template-rows: auto;
-    max-width: 1184px;
-    padding-bottom: 92px;
-    }
+  max-width: 1184px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
+  gap: 16px;
+}
 
-        @media screen and (max-width: 1279px) {
-        .photo-grid {
-          gap: 14px;
-          width: 95%;
-          }
-        }
-          
-        @media screen and (max-width: 1023px) {
-        .photo-grid {
-          padding-bottom: 88px;
-          width: 93%;
-          }
-        }
-        
-        @media screen and (max-width: 658px) {
-        .photo-grid  {
-          padding-bottom: 64px;
-          width: 90%;
-          gap: 12px;
-          }
-        }
+@media screen and (max-width: 1279px) {
+  .photo-grid {
+    max-width: 90.625%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .photo-grid {
+    max-width: 93.75%;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .photo-grid {
+    max-width: 90%;
+    gap: 12px;
+  }
+}
+
+@media screen and (max-width: 319px) {
+  .photo-grid {
+    grid-template-columns: repeat(auto-fit, minmax(248px, 1fr));
+  }
+}
