--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,52 +1,27 @@
 .cover__link {
-    background-image: url(https://i.ibb.co/CKvCY3V/background.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    color: #fff;
-    text-decoration: none;
-    background-position: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    max-width: 100%;
-    max-height: 740px;
+  display: block;
+  min-height: 740px;
+  z-index: 2;
+  grid-row: 1/3;
+  grid-column: 1;
 }
 
-.cover__link::before{
-    content: "";
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    background: #2A2C2F;
-    opacity: 0.3;
-    position: absolute;
-    transition: opacity .6 linear;
+@media screen and (max-width: 1279px) {
+  .cover__link {
+    min-height: 58vw;
+  }
 }
 
-.cover__link:hover::before {
-    opacity: 0.6;
+@media screen and (max-width: 1023px) {
+  .cover__link {
+    min-height: 63vw;
+  }
 }
 
-@media screen and (max-width: 1023px){
-    .cover__link{
-        width: 100%;
-        max-width: 768px;
-        max-height: 480px;
-        background-size: contain;
-        background-position: top;
-    }
-}
-
-@media screen and (max-width: 767px){
-    .cover__link{
-        width: 100%;
-        max-width: 100%;
-        max-height: 100%;
-        background-size: contain;
-        background-position: top;
-    }
+@media screen and (max-width: 320px) {
+  .cover__link {
+    min-height: 200px;
+  }
 }
 
   
