--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,25 +1,23 @@
 .cover__subtitle {
-  margin: 0 auto;
-  margin-top: 32px;
-  margin-bottom: 245px;
-  font-family: 'Inter', Arial, Helvetica, sans-serif;
+  margin: 0;
+  max-width: 360px;
   font-size: 18px;
   line-height: 22px;
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
+  font-weight: 400;
   text-align: center;
-  width: 360px;
+  grid-row: 2;
+  grid-column: 1;
   z-index: 1;
+  justify-self: center;
 }
 
-@media screen and (max-width: 767px){
+@media screen and (max-width: 767px) {
   .cover__subtitle {
-      font-style: normal;
-      font-weight: normal;
-      font-size: 14px;
-      line-height: 16px;
-      max-width: 260px;
-      margin-top: 16px;
-      margin-bottom: 33px;
-      
+    font-size: 14px;
+    line-height: 16px;
+    max-width: 260px;
+    margin-top: 16px;
+    margin-bottom: 33px;
   }
 }
-  
