--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,26 +1,30 @@
 .cover {
   max-width: 1184px;
-  position: relative;
   margin: 0 auto;
-  margin-top: 92px;
-
+  position: relative;
+  display: grid;
+  grid-template-rows: repeat(2, min-content);
+  grid-gap: 32px;
 }
 
-@media all and (max-width: 1023px){
-  .cover{
-      max-height: 480px;
-      max-width: 768px;
-      margin-top: 0;
-      margin-bottom: 0;
-  }
+.cover:before {
+  content: '';
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #2A2C2F;
+  opacity: .3;
+  transition: .3s ease;
 }
 
+.cover:hover::before {
+  opacity: .8;
+}
 
-@media all and (max-width: 767px){
-  .cover  {
-      max-height: 200px;
-      max-width: 320px;
-      margin-top: 0;
-      margin-bottom: 0;
+@media screen and (max-width: 767px) {
+  .cover {
+    grid-gap: 16px;
   }
 }
