--- a/blocks/footer/__row-link/footer__row-link.css
+++ b/blocks/footer/__row-link/footer__row-link.css
@@ -1,28 +1,24 @@
 .footer__row-link {
-    margin-right: 18px;
-    text-decoration: none;
-    color: #fff;
-    font-family: 'Inter', Arial, Helvetica, sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 18px;
-    transition: opacity 0.6 linear;
+    display: block;
+  text-decoration: none;
+  color: #fff;
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 18px;
+  transition: .2s ease-in-out;
+  padding-right: 18px;
 }
 
-.footer__row-link:hover{
-    opacity: .6;
+.footer__row-link:hover {
+  opacity: .5;
 }
 
-@media screen and (max-width: 767px){
-    .footer__row-link {
-        font-family: 'Inter', Arial, Helvetica, sans-serif;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 24px;
-        line-height: 24px;
-        margin: 0;
-        margin-bottom: 20px;
-    }
-    
+@media screen and (max-width: 767px) {
+  .footer__row-link {
+    padding-bottom: 32px;
+    padding-right: 0;
+    font-size: 24px;
+    line-height: 24px;
+  }
 }
