--- a/blocks/footer/__row/footer__row.css
+++ b/blocks/footer/__row/footer__row.css
@@ -1,36 +1,12 @@
 .footer__row {
-    margin: 0;
-    display: grid;
-    justify-items: start;
-    grid-column-gap: 18px;
-    grid-template-columns: repeat(5, fit-content(100%));
-    max-width: 878px;
-    text-decoration: none;
-    color: #FFFFFF;
-    padding: 92px 48px 24px 48px;
-    list-style: none;
+  margin: 0;
+  list-style-type: none;
+  padding: 0;
+  display: flex;
 }
 
-@media screen and (min-width: 769px) and (max-width: 1024px) {
-    .footer__row {
-        padding: 88px 24px 24px 24px;
-    }
+@media screen and (max-width: 767px) {
+.footer__row {
+  flex-direction: column;
 }
-
-@media screen and (min-width: 321px) and (max-width: 768px) {
-    .footer__row {
-        padding-left: 0;
-        max-height: 18px;
-        max-width:93.75%;
-    }
-}
-
-@media screen and (max-width: 320px) {
-    .footer__row {
-        grid-template-rows: repeat(5, 1fr);
-        grid-template-columns: repeat(1, 1fr);
-        padding-left: 16px;
-        padding-bottom: 0;
-        gap: 32px;
-    }
 }
