--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,43 +1,21 @@
 .footer {
-    margin: 0 auto;
-    justify-content: space-between;
-    align-items: baseline;
-    display: flex;
-    flex-direction: row;
-    max-width: 1184px;
+  max-width: 1184px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  padding: 92px 0 24px 0;
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
-    .footer {
-      max-width: 928px;
-    }
+@media screen and (max-width: 1279px) {
+  .footer {
+    max-width: 90.625%;
+    padding-top: 88px;
   }
-  
-  @media screen and (min-width: 768px) and (max-width: 1023px) {
-    .footer {
-      max-width: 720px;
-      margin-top: 88px;
-      margin-left: 24px;
-      margin-right: 24px;
-    }
+}
+
+@media screen and (max-width: 767px) {
+  .footer {
+    padding-top: 64px;
+    flex-direction: column;
   }
-  
-  @media screen and (max-width: 767px) {
-    .footer {
-      max-width: 186px;
-      margin-top: 64px;
-      margin-left: 16px;
-      margin-right: 118px;
-      flex-direction: column;
-    }
-  }
-  
-  @media screen and (max-width: 319px) {
-    .footer {
-      max-width: 186px;
-      margin-top: 64px;
-      margin-left: 16px;
-      margin-right: 118px;
-      flex-direction: column;
-    }
-  }
+}
