--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,21 +1,33 @@
 .header {
-    margin: 28px 48px 56px;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-  }
+  max-width: 1184px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 28px 0 56px;
+}
 
-  @media screen and (min-width: 1023px) and (max-width: 1279px) {
-    .header { 
-          max-width: 1184px;
-          margin-top: 28px;
-    }
-    
+@media screen and (max-width: 1280px) {
+  .header {
+    max-width: 92.5%;
   }
-  
-  @media screen and (max-width: 767px) {
-    .header {
-      margin: 16px 16px 48px;
-      max-width: 720px;
-    }
+}
+
+@media screen and (max-width: 1024px) {
+  .header {
+    max-width: 90.625%;
+    padding-bottom: 48px;
   }
+}
+
+@media screen and (max-width: 768px) {
+  .header {
+    max-width: 93.75%;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .header {
+    max-width: 90%;
+  }
+}
