--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,22 +1,23 @@
 .intro__title {
     font-family: 'Inter', Arial, Helvetica, sans-serif;
-    font-style: normal;
+    margin: 0;
     font-weight: 900;
     font-size: 54px;
     line-height: 58px;
-    color:#FFFFFF;
-    margin-bottom: 40px;
+  }
+  
+  @media screen and (max-width: 767px) {
+    .intro__title {
+      font-size: 6vw;
+      line-height: 1.1;
+      max-width: 90%;
+      padding-bottom: 16px;
     }
-
-    @media screen and (max-width: 1024px) {
-        .intro__title {
-            margin-left: 0;
-        }   
+  }
+  
+  @media screen and (max-width: 320px) {
+    .intro__title {
+      font-size: 32px;
+      line-height: 35px;
     }
-    
-    @media screen and (max-width: 768px) {
-        .intro__title {
-            font-size: 32px;
-            line-height: 35px;
-        }
-    }
+  }
