--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,24 +1,16 @@
 .lead {
-    margin: 0 148px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    margin: 0 auto;
+    max-width: 984px;
+  }
+  
+  @media screen and (max-width: 1024px) {
+    .lead {
+      max-width: 90.625%;
     }
-
-    @media screen and (min-width: 1024px) and (max-width: 1279px) {
-        .lead {
-            margin: 0 48px;
-        }
+  }
+  
+  @media screen and (max-width: 768px) {
+    .lead {
+      max-width: 100%;
     }
-    
-    @media screen and (min-width: 768px) and (max-width: 1023px) {
-        .lead {
-            margin: 0;
-        }
-    }
-    
-    @media screen and (max-width: 767px) {
-        .lead {
-            margin: 0;
-        }
-    }
+  }
