--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,4 +1,10 @@
 .place__image {
-  max-width: 100%;
-  margin: 0;
+  width: 100%;
+  grid-row: 2/6;
+}
+
+@media screen and (max-width: 767px) {
+  .place__image {
+    grid-row: auto;
+  }
 }
