--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,33 +1,38 @@
 .place__paragraph {
-  margin: 32px 16px 0 16px;
-  font-size: 18px;
-  line-height: 1.63;
+  grid-column: 2;
   font-family: 'Inter', Arial, Helvetica, sans-serif;
   font-weight: 400;
-  max-width: 484px;
+  font-size: 18px;
+  line-height: 29.34px;
+  margin: 0 0 25px 0;
 }
 
-.place__paragraph:nth-child(2n) {
-  margin: 25px 16px 0 16px;
+.place__paragraph:last-of-type {
+  margin-bottom: 0;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
   .place__paragraph {
-      margin: 0 0 25px 0;
-      max-width: 352px;
-      font-size: 16px;
-  }
-  .place__paragraph:nth-child(2n) {
-      margin: 0;
+    font-size: 16px;
+    line-height: 26.08px;
   }
 }
 
-@media screen and (min-width: 1023px) {
+@media screen and (max-width: 767px) {
   .place__paragraph {
-      margin: 0 0 25px 0;
-      max-width: 456px;
+    grid-column: 1;
+    margin-left: 24px;
+    margin-right: 24px;
   }
-  .place__paragraph:nth-child(2n) {
-      margin: 0;
+  
+  .place__paragraph:first-of-type {
+    margin-top: 32px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .place__paragraph {
+    margin: 0 auto 25px auto;
+    max-width: 90%;
   }
 }
