--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,25 +1,28 @@
 .place__title {
-    margin: 0;
-    font-style: normal;
-    font-family: 'Inter', Arial, Helvetica, sans-serif;
-    font-weight: 900;
-    font-size: 72px;
-    line-height: 1.06;
-    color: #ffffff;
-    max-width: 460px;
+  margin: 0 0 48px 0;
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
+  font-weight: 900;
+  font-size: 72px;
+  line-height: 76px;
 }
 
 @media screen and (max-width: 768px) {
-    .place__title {
-        font-size: 32px;
-        line-height: 1.09;
-        padding: 0 16px;
-    }
+  .place__title {
+    font-size: 42px;
+    line-height: 46px;
+  }
 }
 
-@media screen and (max-width: 1024px) {
-    .place__title {
-        font-size: 42px;
-        max-width: 340px;
-    }
+@media screen and (max-width: 767px) {
+  .place__title {
+    margin-left: 24px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .place__title {
+    font-size: 32px;
+    line-height: 38px;
+    margin: 0 16px 32px 16px;
+  }
 }
