--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,9 +1,10 @@
 .place__url-heading {
-  font-family: 'Inter', Arial, Helvetica, sans-serif;
-  font-style: normal;
-  font-weight: 400;
+  margin: 0 0 12px 0;
+  color: #AAA;
   font-size: 12px;
   line-height: 12px;
-  letter-spacing: 0.2em;
-  color: #AAAAAA;
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  letter-spacing: 0.32px;
+  text-transform: uppercase;
 }
