--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,10 +1,16 @@
 .place__website {
-    margin: 32px 16px;
-}
-
-@media screen and (min-width: 768px) {
+    align-self: end;
+    margin-bottom: 48px;
+  }
+  
+  @media screen and (max-width: 767px) {
     .place__website {
-        margin: 0;
-        align-self: end;
+      margin-left: 24px;
     }
-}
+  }
+  
+  @media screen and (max-width: 320px) {
+    .place__website {
+      margin: 0 16px 32px 16px;
+    }
+  }
