--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,30 +1,37 @@
 .places {
-    font-family: 'Inter', Arial, sans-serif;
-    background-color: #2a2c2f;
     max-width: 984px;
     margin: 0 auto;
-    padding-bottom: 52px;
-}
-
-@media screen and (max-width: 767px) {
-    .places {
-        padding-bottom: 40px;
-        max-width: 320px;
-    }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-    .place { 
-        padding-bottom: 44px;
-        max-width: 720px;
-    }
-    
+    display: grid;
+    gap: 80px;
+    padding-top: 92px;
+    padding-bottom: 92px;
   }
-
-  @media screen and (min-width: 1023px) and (max-width: 1279px) {
-    .place { 
-        padding-bottom: 48px;
-        max-width: 928px;
+  
+  @media screen and (max-width: 1024px) {
+    .places {
+      max-width: 90.625%;
     }
-    
+  }
+  
+  @media screen and (max-width: 768px) {
+    .places {
+      gap: 73px;
+      max-width: 93.75%;
+      padding-top: 88px;
+    }
+  }
+  
+  @media screen and (max-width: 767px) {
+    .places {
+      max-width: 100%;
+    }
+  }
+  
+  @media screen and (max-width: 320px) {
+    .places {
+      gap: 50px;
+      padding-bottom: 64px;
+      padding-top: 64px;
+  
+    }
   }
